--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ VAL_REGION = '' #your valorant region 'na', 'eu' etc..
 
 #----------------------TIKTOK CONF-------------------
 
-    #--------------ACC CONF-------------------
+    #--------------ACC CONF------------------- <------ dont need this no more 
 
 TIKTOK_USERNAME = '' #tiktok username
 TIKTOK_PASSWORD = '' #tiktok password 
